--- a/src/index.css
+++ b/src/index.css
@@ -219,3 +219,16 @@ h1{
   
   color: #5b5b73;
 }
+
+.form-eliminar input[type="button"]
+{
+  font-size: 12px;
+  background-color: #FFFFFF;
+  border-radius: 8px;
+  width: 35%;
+  padding: 2px 0px 2px;
+  margin: 0px 5px 0px;
+  cursor: pointer;
+  
+  color: #5b5b73;
+}
